<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="Polvos" Id="{75ba71d6-2b19-4172-872f-392baec61731}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL PERSISTENT
	ProdutoAsociado			:ARRAY[1..4] OF INT;
	TablaPolvos				:ARRAY[1..10]OF stListado_Polvos;
	InyectarPolvo			:ARRAY[1..4]OF BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>