<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="Testes" Id="{e31e838f-a1ca-43c0-ab66-af312cdf88da}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	EmTeste:BOOL;
	LinhaSelecionada:INT;
	TesteHora:DATE;
	Teste2:DT;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>