<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="MAIN" Id="{7203522a-8804-4c33-8a85-aa46ba3fd22d}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	HS AT %I*:BOOL;
	DataHoraIHM:DATE_AND_TIME;
	testeString:STRING;
	NomeUsuario:STRING;		//Nome do usuário vindo da IHM
	SerialDaMaquina:STRING;		//Serial da máquina com 16 digitos
	
	//Reloj
	fbTime: FB_LocalSystemTime;
	DataHora	:STRING;
	wHora		:INT;
	wMin		: INT;
	wSec		: INT;


	indice: INT;
	SetLocalTime: NT_SetLocalTime;	//Instância para ajustar a hora
	
	Teste:UDINT;
	Teste2:time;
	Teste3:DT;
	fbSystemTime : GETSYSTEMTIME;
    timeAsFileTime : T_FILETIME;
	
	
	HoraAtual	:DT;	//Hora atual
	udHoraAtual	:UDINT;	//Hora atual em UDINT
	// variavel para testes
	i: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Serial da máquina
SerialDaMaquina := '9BLSB3002RPR0004';



//Ajusta a data e hora do CLP pela IHM
SetLocalTime(
	NETID:= '127.0.0.1.1.1', 
	TIMESTR:= , 
	START:= , 
	TMOUT:= , 
	BUSY=> , 
	ERR=> , 
	ERRID=> );
IF SetLocalTime.START THEN
	SetLocalTime.START := FALSE;
END_IF

//Essa parte do código é utilizada para auxiliar na verificação da útima vez da calibração/lavagem 
fbSystemTime(
    timeLoDW=>timeAsFileTime.dwLowDateTime,
    timeHiDW=>timeAsFileTime.dwHighDateTime 
);

HoraAtual 	:= FILETIME_TO_DT(timeAsFileTime); 
udHoraAtual	:= DT_TO_UDINT(HoraAtual);

Teste := TIME_TO_UDINT(t#1D);



//'DT#1970-01-01-00:00:00'
SetLocalTime.TIMESTR.wDay		:= STRING_TO_WORD(MID(DT_TO_STRING(DataHoraIHM), 2, 12));
SetLocalTime.TIMESTR.wMonth		:= STRING_TO_WORD(MID(DT_TO_STRING(DataHoraIHM), 2, 9));
SetLocalTime.TIMESTR.wYear		:= STRING_TO_WORD(MID(DT_TO_STRING(DataHoraIHM), 4, 4));
SetLocalTime.TIMESTR.wHour		:= STRING_TO_WORD(MID(DT_TO_STRING(DataHoraIHM - T#3H), 2, 15));
SetLocalTime.TIMESTR.wMinute	:= STRING_TO_WORD(MID(DT_TO_STRING(DataHoraIHM), 2, 18));
SetLocalTime.TIMESTR.wSecond	:= STRING_TO_WORD(MID(DT_TO_STRING(DataHoraIHM), 2, 21));

//Faz a leitura da data e hora
fbTime(
	sNetID:= '' , 
	bEnable:= TRUE, 
	dwCycle:=1 , 
	dwOpt:= , 
	tTimeout:= , 
	bValid=> , 
	systemTime=> , 
	tzID=> );
wHora:=WORD_TO_INT(fbTime.systemTime.wHour);
wMin:=WORD_TO_INT(fbTime.systemTime.wMinute);
wSec:=WORD_TO_INT(fbTime.systemTime.wSecond);


//Data e hora formatada para a IHM
//dd/MM/AAAA, HH:mm
DataHora := CONCAT(
    CONCAT(
        CONCAT(
            CONCAT(
                CONCAT(
                    WORD_TO_STRING(fbTime.systemTime.wDay), '/'
                ),
                WORD_TO_STRING(fbTime.systemTime.wMonth)
            ),
            '/'
        ),
        WORD_TO_STRING(fbTime.systemTime.wYear)
    ),
    CONCAT(
        CONCAT(', ', INT_TO_STRING(wHora)),
        CONCAT(':', INT_TO_STRING(wMin))
    )
);

//Inicializacion de variables
IF HMI.iCircuito_a_calibrar=0 THEN
	HMI.iCircuito_a_calibrar:=1;
END_IF
FOR indice:= 1 TO 12 BY 1 DO
	IF Liquidos.Circuito_Liquido[indice]=0 THEN
		Liquidos.Circuito_Liquido[indice]:=1;
	END_IF
END_FOR

//Verifica se tem alguma linha de pó sem produto definido
FOR indice := 1 TO 4 DO
	IF Polvos.ProdutoAsociado[indice] = 0 THEN
		Polvos.ProdutoAsociado[indice] := 1;
	END_IF
END_FOR


VarPersistentes();
Datos_Variadores();
Datos_Caudalimetros();
Agitadores();
_Seguridad();
Alarmas();
Inicio();
Tratadora();
Balanza_Semilla();
Puesto_CA1();
Circuito_L1();
Circuito_L2();
Circuito_L3();
Circuito_L4();
Puesto_CA2();
Circuito_L5();
Circuito_L6();
Circuito_L7();
Circuito_L8();
Puesto_CA3();
Circuito_L9();
Circuito_L10();
Circuito_L11();
Circuito_L12();
Valvulas_Lavado();
Dosificador_Polvo_1();
Dosificador_Polvo_2();
Carga_Semilla();
Descarga_Semilla();

//Testes
Receitas();
PRG_DE_TESTES();
//BancoDeDados();
AlarmesDaMaquina();
IntervaloLavCalibr();
CalculoConsumo();
ConsumoIBCs();
AquecimentoValvulas();
]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="547" Count="0" />
      <LineId Id="549" Count="0" />
      <LineId Id="577" Count="0" />
      <LineId Id="579" Count="0" />
      <LineId Id="548" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="380" Count="6" />
      <LineId Id="378" Count="0" />
      <LineId Id="412" Count="2" />
      <LineId Id="490" Count="0" />
      <LineId Id="477" Count="0" />
      <LineId Id="483" Count="4" />
      <LineId Id="610" Count="0" />
      <LineId Id="757" Count="0" />
      <LineId Id="698" Count="0" />
      <LineId Id="423" Count="0" />
      <LineId Id="492" Count="1" />
      <LineId Id="491" Count="0" />
      <LineId Id="417" Count="0" />
      <LineId Id="411" Count="0" />
      <LineId Id="418" Count="4" />
      <LineId Id="389" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="14" Count="9" />
      <LineId Id="13" Count="0" />
      <LineId Id="132" Count="0" />
      <LineId Id="317" Count="0" />
      <LineId Id="315" Count="0" />
      <LineId Id="314" Count="0" />
      <LineId Id="319" Count="0" />
      <LineId Id="331" Count="16" />
      <LineId Id="322" Count="0" />
      <LineId Id="470" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="216" Count="4" />
      <LineId Id="223" Count="1" />
      <LineId Id="221" Count="0" />
      <LineId Id="609" Count="0" />
      <LineId Id="469" Count="0" />
      <LineId Id="464" Count="1" />
      <LineId Id="467" Count="1" />
      <LineId Id="466" Count="0" />
      <LineId Id="284" Count="0" />
      <LineId Id="283" Count="0" />
      <LineId Id="239" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="96" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="168" Count="0" />
      <LineId Id="199" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="95" Count="0" />
      <LineId Id="201" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="119" Count="2" />
      <LineId Id="202" Count="0" />
      <LineId Id="136" Count="0" />
      <LineId Id="149" Count="2" />
      <LineId Id="203" Count="0" />
      <LineId Id="164" Count="3" />
      <LineId Id="186" Count="0" />
      <LineId Id="169" Count="1" />
      <LineId Id="183" Count="1" />
      <LineId Id="269" Count="0" />
      <LineId Id="268" Count="0" />
      <LineId Id="253" Count="0" />
      <LineId Id="267" Count="0" />
      <LineId Id="299" Count="0" />
      <LineId Id="363" Count="0" />
      <LineId Id="639" Count="0" />
      <LineId Id="668" Count="0" />
      <LineId Id="727" Count="0" />
      <LineId Id="185" Count="0" />
      <LineId Id="817" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>